# bevy-wasm-api

./: .neoconf.json  Cargo.toml  README.md  flake.nix
.github/workflows/: deploy.yaml
bevy-wasm-api-macro/: Cargo.toml
bevy-wasm-api-macro-core/: Cargo.toml
bevy-wasm-api-macro-core/src/: codegen.rs  lib.rs
bevy-wasm-api-macro-core/src/analyze/: item_fn.rs  mod.rs  utils.rs
bevy-wasm-api-macro-core/src/bevy_wasm_api/: analyze.rs  codegen.rs  mod.rs  utils.rs
bevy-wasm-api-macro-core/src/bevy_wasm_api_2/: codegen.rs  lower.rs  mod.rs  parse.rs
bevy-wasm-api-macro-core/src/bevy_wasm_api_2/analyze/: item_fn.rs  mod.rs  utils.rs
bevy-wasm-api-macro/src/: lib.rs
bevy-wasm-api-macro/tests/: ui.rs
bevy-wasm-api-macro/tests/fail/: no-ref-arg1.rs
bevy-wasm-api-macro/tests/pass/: simple-method.rs
examples/vite-app/: index.html  package.json  pnpm-lock.yaml  rsw.toml  vite.config.ts
examples/vite-app/.rsw/: rsw.crates  rsw.err  rsw.info
examples/vite-app/bevy-app/: Cargo.toml  LICENSE_MIT
examples/vite-app/bevy-app/src/: lib.rs
examples/vite-app/src/: Sidebar.ts  Toolbar.ts  main.ts
examples/wasm-app/: Cargo.toml
examples/wasm-app/src/: lib.rs
src/: convert.rs  lib.rs  sync.rs
tests/: ui.rs
tests/fail/: no-mut-ref-world-arg1.rs  no-mut-ref-world-arg1.stderr  no-receiver-arg1.rs  no-receiver-arg1.stderr
tests/pass/: receives-int-types.rs  receives-string-types.rs
tests/pass/receives/: bool-types.rs  float-types.rs  number-slice-types.rs  string-types.rs
tests/pass/returns/: option_primitive.rs  option_struct.rs  primative_bool.rs  primative_float.rs  primative_string.rs  tuple_option_struct.rs  tuple_primitive.rs  tuple_struct.rs  vec_option_primative.rs
tests/pass/returns/vec/: option.rs  primitive.rs  struct.rs
