[package]
name = "bevy-wasm-api"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

members = [ "bevy-wasm-api-macro","bevy-wasm-api-macro-core" , "examples/wasm-app"]

[dependencies]
bevy-wasm-api-macro = { version = "0.1.0", path = "bevy-wasm-api-macro" }
bevy_app = "0.12.1"
bevy_ecs = "0.12.1"
futures = "0.3.30"
js-sys = "0.3.68"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
