[package]
name = "bevy-wasm-api"
version = "0.2.0"
edition = "2021"

[workspace]
resolver = "2"

members = [ 
    "bevy-wasm-api-macro",
    "bevy-wasm-api-macro-core",
    "examples/wasm-app",
    "examples/vite-app/bevy-app"
]

[dependencies]
bevy-wasm-api-macro = { version = "0.2.0", path = "bevy-wasm-api-macro" }
bevy_app = "0.14"
bevy_ecs = "0.14"
futures = "0.3"
js-sys = "0.3"
serde = "1.0.196"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[features]
debug = ["bevy-wasm-api-macro/debug"]

[dev-dependencies]
serde = { version = "1.0.196", features = ["derive"] }
trybuild = "1.0.89"
