[package]
name = "bevy-wasm-api-macro-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
prettyplease = { version = "0.2.16", optional = true }
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full", "extra-traits"] }

[features]
debug = ["dep:prettyplease"]
