[package]
name = "wasm-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wasm_app"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.12.1"
bevy-wasm-api = { version = "0.1.0", path = "../.." }
wasm-bindgen = "0.2.91"
