[package]
name = "bevy-app"
version = "0.1.0"
authors = ["Connor Meehan <connorgm@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
bevy-wasm-api = { version = "0.1.0", path = "../../.." }
serde = { version = "1.0.196", features = ["derive"] }
tsify = { version = "0.4.5", default-features = false, features = ["js"] }
bevy = { version = "0.13", default-features = false, features = ["bevy_render", "bevy_scene", "bevy_sprite", "bevy_winit", "webgl2"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
